# recall

./: .gitignore  HANDOFF.md  INTEGRATION.md  README.md  generate_xcodeproj.py  index.html  package-lock.json  package.json  project.yml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: build-macos.yml  release-updater.yml
Recall/: RecallApp.swift
Recall.xcodeproj/: project.pbxproj
Recall.xcodeproj/xcshareddata/xcschemes/: Recall.xcscheme
Recall/DesignSystem/: RecallTheme.swift
Recall/Models/: Memory.swift  PairingConfig.swift
Recall/Persistence/: MemoryStore.swift
Recall/Resources/: Info.plist
Recall/Services/: KeychainService.swift  PairingService.swift  SyncService.swift
Recall/Shared/: SharedConstants.swift
Recall/ViewModels/: HomeViewModel.swift  SettingsViewModel.swift
Recall/Views/: BottomNavView.swift  ContentView.swift  HomeView.swift  LibraryView.swift  MemoryDetailView.swift  MemoryRowView.swift  PairingView.swift  QRScannerView.swift  RecallFloatingHeader.swift  SearchBarView.swift  SettingsView.swift
RecallShareExtension/: Info.plist  RecallShareExtension.entitlements  ShareView.swift  ShareViewController.swift  ShareViewModel.swift
docs/: github-release-pipeline.md  mobile-pairing.md  updates.md
docs/architecture/: bookmark-integration.md  search-and-platform.md
scripts/: release-github.ps1
src/: app-runtime.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/ai/: hardware.rs  mod.rs
src-tauri/src/ai/ask/: mod.rs  session.rs  tag_intent.rs  temporal.rs
src-tauri/src/ai/embeddings/: auto_tagger.rs  chunker.rs  fastembed_adapter.rs  mod.rs  similarity.rs
src-tauri/src/ai/entities/: company.rs  mod.rs  person.rs  product.rs  project.rs  time_range.rs
src-tauri/src/ai/llm/: mod.rs  qwen2_candle.rs  qwen2_llama.rs  registry.rs
src-tauri/src/ai/ocr/: mac_vision.rs  mod.rs  preprocessing.rs  windows_winocr.rs
src-tauri/src/ai/scheduler/: mod.rs  queue.rs  throttling.rs  worker.rs
src-tauri/src/ai/surfaces/: active_thread.rs  engine.rs  forgotten_gold.rs  mod.rs  weekly_recap.rs
src-tauri/src/ai/trails/: mod.rs
src-tauri/src/commands/: ai.rs  app.rs  bookmarks.rs  files.rs  license.rs  memories.rs  mod.rs  pairing.rs  platform.rs  pointer.rs  projects.rs  settings.rs  windows.rs
src-tauri/src/db/: migrations.rs  mod.rs  repositories.rs  seed.rs  sqlite_ask_recall_session_repository.rs  sqlite_license_repository.rs  sqlite_memory_repository.rs  sqlite_proactive_surface_repository.rs  sqlite_project_repository.rs  sqlite_settings_repository.rs  system_projects.rs
src-tauri/src/errors/: app_error.rs
src-tauri/src/platform/: clipboard_image.rs  contracts.rs  factory.rs  mod.rs
src-tauri/src/platform/mac/: mod.rs  safari_bookmarks.rs
src-tauri/src/platform/windows/: mod.rs
src-tauri/src/services/: bookmark_intelligence_service.rs  bookmark_parser.rs  bookmark_service.rs  capture_service.rs  clipboard_watcher_service.rs  export_service.rs  file_ingestion_service.rs  file_watcher_service.rs  license_service.rs  link_enrichment_service.rs  link_utils.rs  memory_service.rs  mod.rs  pairing_service.rs  project_service.rs  receiver_service.rs  screenshot_retention.rs  screenshot_store.rs  settings_service.rs  shortcut_service.rs  spoken_transcript_service.rs  x_bookmark_sync.rs  x_oauth_repository.rs
src-tauri/src/state/: app_state.rs
src/components/: LicenseModal.tsx
src/components/capture/: InstantCaptureToast.tsx
src/components/dashboard/: AiActivityPill.tsx  Dashboard.tsx  HomeBriefing.tsx  ProactiveSurface.tsx
src/components/memory/: AiSummaryPanel.tsx  MemoriesView.tsx  MemoryCard.tsx  MemoryDetail.tsx  MemoryTrail.tsx  ProjectsView.tsx  RelatedMemories.tsx  ScreenshotPreview.tsx
src/components/settings/: BrainQrCode.tsx  SettingsView.tsx
src/components/system/: RecallMark.tsx  ThemeToggle.tsx
src/domain/: bookmarks.ts  formatters.test.ts  formatters.ts  sourceScope.ts  systemProjects.ts  types.ts
src/features/pairing/: pairingService.ts  pairingStore.ts  qrPayload.ts
src/features/pointer/: PointerPanel.tsx  pointerActions.ts  pointerStore.ts
src/features/receiver/: desktopReceiver.ts  ingestIncomingMemory.ts  validateIncomingMemory.ts
src/hooks/: useBlendedSearch.ts  useBootApp.ts  useRecallDataSyncEvents.ts  useResurfaceNotifications.ts  useSystemTheme.ts
src/platform/contracts/: AppContextAdapter.ts  ClipboardAdapter.ts  FileSystemAdapter.ts  PlatformAdapters.ts  ShortcutAdapter.ts  WindowAdapter.ts
src/platform/factory/: createPlatformAdapters.ts
src/platform/mac/: MacAppContextAdapter.ts  MacClipboardAdapter.ts  MacFileSystemAdapter.ts  MacShortcutAdapter.ts  MacWindowAdapter.ts
src/platform/windows/: WindowsAppContextAdapter.ts  WindowsClipboardAdapter.ts  WindowsFileSystemAdapter.ts  WindowsShortcutAdapter.ts  WindowsWindowAdapter.ts
src/services/: bookmarks.ts  externalLinkService.ts  licenseService.ts  memories.ts  projects.ts  settings.ts
src/services/ai/: AiClient.ts
src/services/api/: tauri-client.ts
src/services/bookmarks/: bookmarkIntelligence.test.ts  bookmarkIntelligence.ts
src/services/capture/: CaptureInputBuilder.test.ts  CaptureInputBuilder.ts  CaptureTrustHarness.test.ts  captureSync.test.ts  captureSync.ts  captureTelemetry.ts  captureTrust.test.ts  captureTrustFixtures.ts  captureTrustRunner.ts  captureTrustTestSupport.ts  saveCapturedMemory.ts
src/services/context/: ContextEngine.test.ts  ContextEngine.ts
src/services/license/: LicenseService.ts  TauriLicenseService.ts
src/services/resurface/: memoryResurface.ts
src/services/search/: EmbeddingGenerator.ts  (+14 more)
src/stores/: appStore.ts  chatStore.ts  contextStore.ts  licenseStore.ts  memoryStore.ts  projectStore.ts  searchStore.ts  settingsStore.ts  updateStore.ts
src/styles/: globals.css
src/utils/: ids.ts  text.ts
src/windows/: MainWindow.tsx  QuickSaveWindow.tsx  SearchWindow.tsx  WidgetWindow.tsx  WindowRouter.tsx
updates/: latest.json
(+3 files in other folders)
