[package]
name = "recall"
version = "0.1.7"
description = "Recall desktop app"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "recall_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
kuchikiki = "0.8.8-speedreader"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tauri = { version = "2.9.3", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-opener = "2.5.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
url = "2.5.8"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
] }
