[package]
name = "recall"
version = "0.5.7"
description = "Recall desktop app"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "recall_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
fastembed = { version = "4", default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "gif"] }
kuchikiki = "0.8.8-speedreader"
# v0.5.0 — local LLM inference. Switched from candle (pure Rust) to
# llama-cpp-2 (Rust bindings over llama.cpp) after measuring real-
# world prefill latency on tier-C 7B Q4_K_M: candle's CPU kernels
# put first-token latency for a 1000-token RAG prompt at ~6 minutes.
# llama.cpp's hand-tuned SIMD prefill cuts that to 7–20s on the same
# hardware. The build cost is libclang on CI runners and ~15-20 MB
# of compiled C++ in the binary — both worth it.
#
# Pinning the minor version: this crate's API has been moving;
# unpinned `0.1` would silently break on the next release.
llama-cpp-2 = "0.1"
num_cpus = "1.16"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
sysinfo = { version = "0.32.1", default-features = false, features = ["system"] }
tauri = { version = "2.9.3", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-notification = "2.3.2"
tauri-plugin-opener = "2.5.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
url = "2.5.8"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Apple Vision Framework bindings via the objc2 ecosystem.
# `objc2-vision` exposes VNRecognizeTextRequest; `objc2-foundation` brings
# NSString/NSDictionary; `objc2-core-foundation` brings CFData; and
# `objc2-core-graphics` brings CGImage which Vision needs.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSValue", "NSData", "NSDictionary", "NSError"] }
objc2-core-foundation = { version = "0.3", features = ["CFBase", "CFData"] }
objc2-vision = { version = "0.3", features = ["VNRequest", "VNRequestHandler", "VNRecognizeTextRequest", "VNObservation", "VNError", "VNTypes", "block2"] }
objc2-core-graphics = { version = "0.3", features = ["CGImage", "CGDataProvider", "CGColorSpace"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Windows.Media.Ocr lives in the WinRT projection. We reuse the same `windows`
# crate that's already pulled in for Win32 frontmost-app detection and just
# add the Media.Ocr / Storage.Streams / Graphics.Imaging features.
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Foundation",
  "Foundation_Collections",
  "Globalization",
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage_Streams",
] }
